# addns

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/provider/: aws.rs  mod.rs
testdata/awsroute53/: get_success.xml
