[package]
name = "addns"
version = "0.1.0"
authors = ["Iain Earl <iain@itmecho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.42"
rusoto_route53 = "0.42"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
trust-dns-resolver = "0.19"
